# kfx

./: .clang_complete  .gitignore  CMakeLists.txt  Jenkinsfile  README.md  travis.yml
docs/: Doxyfile  Notes.txt  Plan.txt
examples/: CMakeLists.txt
examples/basic/src/: CMakeLists.txt  basic-main.cpp
include/: keyboard.h
include/kfx/: Assert.h  Clock.h  Components.h  Engine.h  EventListener.h  GameObject.h  GameObjectFactory.h  Handle.h  HandleManager.h  InputPeripheral.h  KeyboardInputPeripheral.h  Listener.h  ListenerInterface.h  Log.h  Message.h  MessageBox.h  MouseInputPeripheral.h  ObservableSubject.h  ObserverInterface.h  Result.h  StandardEventMessage.h  StandardObserverMessage.h  Window.h  keyboard.h
include/kfx/graphics/: BasicMaterial.h  Image.h  Material.h  MaterialInterface.h  Mesh.h  Renderer3D.h  Shader.h  Texture.h
include/kfx/input/: InputSystem.h
include/kfx/res/: BufferObject.h  HandledResource.h  Material.h  MaterialManager.h  Mesh.h  MeshManager.h  MeshUtil.h  Renderer3D.h  ShaderManager.h  ShaderUtil.h  Texture.h  TextureManager.h  TextureUtil.h  Vertex3D.h  VertexArrayObject.h
include/kfx/resources/: FileUtil.h  HandledResource.h  MaterialManager.h  MaterialParser.h  MeshManager.h  MeshUtil.h  Resource.h  ShaderManager.h  ShaderUtil.h  TextureManager.h  TextureUtil.h
include/kfx/system/: CameraSystem.h  FpsInputSystem.h  GraphicsSystem3D.h  MeshSystem.h  PointLightSystem.h  SingleComponentSystem.h  System.h  TransformSystem.h
lib/: libglfw.so.3.3
res/materials/: grime_tiles.mat  missing.mat  test-material.mat
res/shaders/: basic.fs  basic.vs
res/shaders/basic/: basic.fs  basic.vs
src/: CMakeLists.txt  Components.cpp  Engine.cpp  GameObject.cpp  GameObjectFactory.cpp  Handle.cpp  HandleManager.cpp  Message.cpp  MessageBox.cpp  keyboard.cpp  main.cpp
src/input/: InputSystem.cpp
src/kfx/: Assert.cpp  CMakeLists.txt  Clock.cpp  Components.cpp  Engine.cpp  GameObject.cpp  GameObjectFactory.cpp  Handle.cpp  HandleManager.cpp  KeyboardInputPeripheral.cpp  Log.cpp  MessageBox.cpp  MouseInputPeripheral.cpp  ObservableSubject.cpp  Window.cpp  main.cpp
src/kfx/graphics/: BasicMaterial.cpp  Material.cpp  Mesh.cpp  Renderer3D.cpp  Shader.cpp  Texture.cpp
src/kfx/res/: FileUtil.cpp  Material.cpp  MaterialManager.cpp  MaterialParser.cpp  Mesh.cpp  MeshManager.cpp  MeshUtil.cpp  Renderer3D.cpp  Shader.cpp  ShaderManager.cpp  ShaderUtil.cpp  Texture.cpp  TextureManager.cpp  TextureUtil.cpp
src/kfx/resources/: FileUtil.cpp  MaterialManager.cpp  MaterialParser.cpp  MeshManager.cpp  MeshUtil.cpp  ShaderManager.cpp  ShaderUtil.cpp  TextureManager.cpp  TextureUtil.cpp
src/kfx/system/: CameraSystem.cpp  FpsInputSystem.cpp  GraphicsSystem3D.cpp  MeshSystem.cpp  PointLightSystem.cpp  System.cpp  TransformSystem.cpp
src/resources/: FileUtil.cpp  MeshManager.cpp  MeshUtil.cpp
src/system/: GraphicsSystem3D.cpp  System.cpp
tests/src/: CMakeLists.txt  test-file-utilities.cpp  test-game-object-factory.cpp  test-handle-manager.cpp  test-handled-resource.cpp  test-mesh-manager.cpp  test-mesh-utilities.cpp  test-message-box.cpp  test-observer.cpp  test-shader-manager.cpp  test-shader-utilities.cpp  test-test.cpp  test-window.cpp
